# rust-coldcard

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
coldcard/: Cargo.toml  README.md
coldcard-cli/: Cargo.toml  README.md
coldcard-cli/src/: fw_upgrade.rs  main.rs  remote.rs  xpub_version.rs
coldcard/src/: constants.rs  firmware.rs  lib.rs  protocol.rs  util.rs
coldcard/src/protocol/: derivation_path.rs
src/: constants.rs  firmware.rs  lib.rs  protocol.rs  util.rs
src/protocol/: derivation_path.rs
