[package]
name = "coldcard"
version = "0.1.0"
edition = "2021"
authors = ["Alfred Hodler <alfred_hodler AT protonmail DOT com>"]
license = "MIT"
repository = "https://github.com/alfred-hodler/rust-coldcard/"
description = "Coldcard Wallet Interface Library in Rust"
keywords = ["coldcard", "bitcoin", "wallet"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "hardware-support"]

[features]
cli = ["clap", "base64", "hex", "json", "hmac-sha256", "rpassword"]

[[bin]]
name = "coldcard"
required-features = ["cli"]

[dependencies]
aes-ctr = "0.6.0"
base58 = "0.2.0"
enum-as-inner = "0.4.0"
hidapi = { version = "1.3.3", default-features = false, features = ["linux-static-hidraw"] }
secp256k1 = { version = "0.22.1", features = ["rand-std", "bitcoin_hashes"] }

# CLI dependencies
base64 = { version = "0.13.0", optional = true }
clap = { version = "3.1.6", features = ["derive"], optional = true }
hex = { version = "0.4.3", optional = true }
hmac-sha256 = { version = "1.1.2", optional = true }
json = { version = "0.12.4", optional = true }
rpassword = { version = "6.0.1", optional = true }
