[package]
name = "coldcard-cli"
version = "0.11.2"
edition = "2021"
authors = ["Alfred Hodler <alfred_hodler@protonmail.com>"]
license = "MIT"
repository = "https://github.com/alfred-hodler/rust-coldcard/"
description = "Coldcard Wallet CLI Tool"
keywords = ["coldcard", "bitcoin", "wallet"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "hardware-support"]

[features]
default = ["coldcard/default", "coldcard/log"]

[[bin]]
name = "coldcard"
path = "src/main.rs"

[dependencies]
coldcard = { version = "0.11.1", path = "../coldcard" }
base64 = "0.13.0"
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4.3"
hmac-sha256 = "1.1.7"
json = "0.12.4"
rpassword = "7.3.1"
env_logger = "0.11.0"
