[package]
name = "coldcard-cli"
version = "0.12.3"
edition = "2021"
authors = ["Alfred Hodler <alfred_hodler@protonmail.com>"]
license = "MIT"
repository = "https://github.com/alfred-hodler/rust-coldcard/"
description = "Coldcard Wallet CLI Tool"
keywords = ["coldcard", "bitcoin", "wallet"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "hardware-support"]

[features]
default = ["coldcard/default", "coldcard/log"]

[[bin]]
name = "coldcard"
path = "src/main.rs"

[dependencies]
coldcard = { version = "0.12.2", path = "../coldcard" }
base58 = "0.2.0"
base64 = "0.21.7"
clap = { version = "3.2.22", features = ["derive"] }
hex = "0.4.3"
hmac-sha256 = "1.1.7"
indicatif = "0.17.7"
json = "0.12.4"
rpassword = "7.3.1"
env_logger = "0.11.1"
regex = "1.10.3"
ureq = "2.9.4"
semver = "1.0.21"
console = "0.15.8"
