[package]
name = "coldcard"
version = "0.12.1"
edition = "2021"
authors = ["Alfred Hodler <alfred_hodler@protonmail.com>"]
license = "MIT"
repository = "https://github.com/alfred-hodler/rust-coldcard/"
description = "Coldcard Wallet Interface Library in Rust"
keywords = ["coldcard", "bitcoin", "wallet"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "hardware-support"]

[features]
default = ["linux-static-hidraw"]
linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-static-libusb = ["hidapi/linux-static-libusb"]

[dependencies]
aes-ctr = "0.6.0"
base58 = "0.2.0"
bitcoin_hashes = "0.13.0"
hidapi = { version = "2.4.1", default-features = false }
k256 = { version = "0.13.3", features = ["arithmetic"] }
log = { version = "0.4.20", optional = true }
rand = "0.8.5"
